--- a/src/main/resources/static/about-us.html
+++ b/src/main/resources/static/about-us.html
@@ -103,7 +103,7 @@
 						<div class="top-left">
 							<ul class="list-main">
 								<li><i class="ti-headphone-alt"></i> +060 (800) 801-582</li>
-								<li><i class="ti-email"></i> support@shophub.com</li>
+								<li><i class="ti-email"></i> supportt@shophub.com</li>
 							</ul>
 						</div>
 						<!--/ End Top Left -->
